feat: implement password reset and email deliverability tracking (#3)
* feat: implement email deliverability tracking, anti-spam validation and SendGrid webhooks

* fix: RegisterUseCase constructor signature

* feat: implement secure forgot password and reset flow

* chore/fix: update RabbitMQ configs, fix email notification data truncation, adjust vite port and sync monorepo

* chore(security): centralize credentials and harden infrastructure config

* security(backend): harden gateway cors, jwt token lifespans, and error responses

* feat(notification): implement websocket real-time in-app notifications with connection rate limiting

* feat(frontend): integrate real-time notification bell and websocket connection context

* fix(user-service): rename jwtConfig.java to JwtConfig.java and refactor RegisterUseCaseTest

- Fix file naming convention: jwtConfig.java -> JwtConfig.java (match class name)
- Refactor RegisterUseCaseTest to use @Mock/@InjectMocks annotations instead of manual Mockito.mock()